# cpp_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run_docker.sh
.devcontainer/: Dockerfile  Dockerfile_arm  Dockerfile_test  Dockerfile_x86  docker-compose.yml
.github/workflows/: build.yml
cmake/pkgs/: eigen3_install.cmake  flatc_install.cmake  gtest_install.cmake
cmake/utils/: debugging.cmake  fb_idl_compile.cmake
include/: func.h
src/: func.cpp  main.cpp
src/lib/: CMakeLists.txt
src/lib/idl/: test.fbs
src/lib/include/: func.h
src/lib/include/utils/AttitudeMath/: dcm.h  dcm.hpp  euler_angles.hpp  matrix33.hpp  vector3.hpp
src/lib/include/utils/log/: console_logger.hpp  ilogger.hpp  null_logger.hpp
src/lib/include/utils/network/: addr_info.hpp  netbase.hpp  network_base.hpp  tcp_base.hpp  tcp_client.hpp  tcp_listener.hpp
src/lib/include/utils/serialization/: iserialization.hpp  test_data_poco.hpp
src/lib/src/: func.cpp
src/lib/src/utils/AttitudeMath/: dcm.cpp  matrix33.cpp  vector3.cpp
src/lib/src/utils/log/: console_logger.cpp  ilogger.cpp
src/lib/src/utils/network/: addr_info.cpp  netbase.cpp  network_base.cpp  tcp_base.cpp  tcp_client.cpp  tcp_listener.cpp
src/lib/src/utils/serialization/: test_data_poco.cpp
tests/: CMakeLists.txt  func.cc
tests/common/: .placeholder
tests/include/: README.md  settings.hpp  test_stream_formatters.hpp
tests/utils/: network.cc  serialization.cc
tests/utils/AttitudeMath/: dcm.cc  euler.cc  matrix33.cc  vector3.cc
